--- a/pms-infra-filesystem.cabal
+++ b/pms-infra-filesystem.cabal
@@ -20,7 +20,7 @@ name:               pms-infra-filesystem
 -- PVP summary:     +-+------- breaking API changes
 --                  | | +----- non-breaking API additions
 --                  | | | +--- code changes with no API change
-version:            0.0.8.0
+version:            0.0.1.0
 
 -- A short (one-line) description of the package.
 synopsis:           pms-infra-filesystem
@@ -131,6 +131,8 @@ test-suite pms-infra-filesystem-test
                       async,
                       unix,
                       lens,
+                      filepath,
+                      directory,
                       pms-domain-model,
                       pms-infra-filesystem
 
